# meteo-L053

./: .cproject  .gitignore  README.md
ChibiOS/demos/STM32/RT-STM32L053-DISCOVERY/: Makefile
ChibiOS/demos/STM32/RT-STM32L053-DISCOVERY/cfg/: mcuconf.h
ChibiOS/demos/STM32/RT-STM32L053R8-NUCLEO64/: Makefile
ChibiOS/os/common/ports/ARMCMx/: chcore_v7m.h
ChibiOS/os/hal/boards/ST_STM32F469I_DISCOVERY/cfg/: board.chcfg
ChibiOS/os/hal/lib/complex/serial_nor/: hal_serial_nor.c
ChibiOS/os/hal/lib/complex/serial_nor/devices/winbond_w25/: hal_flash_device.c  hal_flash_device.h  hal_flash_device.mk
ChibiOS/os/hal/ports/STM32/LLD/QUADSPIv1/: hal_wspi_lld.c
ChibiOS/os/rt/include/: chtm.h
ChibiOS/os/various/shell/: shell.mk
cmake/: FindChibiOS.cmake  FindSTM32HAL.cmake  FindSTM32STD.cmake  chibios.cmake  gcc_stm32.cmake  gcc_stm32f4.cmake  gcc_stm32f7.cmake
cmake/ChibiOS/: ChibiOS.cmake  ChibiOS_HAL.cmake  ChibiOS_RTOS.cmake
src/: CMakeLists.txt  Makefile  main.c  main.h
src/cfg/: appCfg.h  board.h  halconf.h  hw.c  hw.h  mcuconf.h
src/drivers/: ADS1X15.c  ADS1X15.h  PWFusion_AS3935_I2C.c  PWFusion_AS3935_I2C.h  bh1750.c  bh1750.h  bmp280.c  bmp280.h  eeprom.c  eeprom.h  ml8511.c  ml8511.h  msp.c  msp.h  veml7700.c  veml7700.h
src/drivers/stm32L0/: eeprom_lld.c  eeprom_lld.h
src/shell/: debugShellCmd.c  debugShellCmd.h  shell.c  shell.h  shellCmd.c  shellCmd.h
src/threads/: as3935Thread.c  as3935Thread.h  bh1750Thread.c  bh1750Thread.h  bmp280Thread.c  bmp280Thread.h  hc12Thread.c  hc12Thread.h  hwListThread.c  hwListThread.h  ml8511Thread.c  ml8511Thread.h  pools.c  pools.h  powerThread.c  powerThread.h  rainThread.c  rainThread.h  scheduleListThread.c  scheduleListThread.h  veml7700Thread.c  veml7700Thread.h  windThread.c  windThread.h
