cmake_minimum_required(VERSION 3.19)

SET(STM32_CHIP STM32L053R8)
SET(STM32_FAMILY  L0)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../cmake/")
SET(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_LIST_DIR}/../cmake/gcc_stm32.cmake)

SET(CHIBIOS_ROOT  ${CMAKE_CURRENT_LIST_DIR}/../ChibiOS)
SET(CHIBIOS_HALCONF_FILE ${CMAKE_CURRENT_LIST_DIR}/cfg/halconf.h)
SET(CHIBIOS_CHCONF_FILE ${CMAKE_CURRENT_LIST_DIR}/cfg/chconf.h)
SET(CHIBIOS_PROCESS_STACK_SIZE 0x190)
SET(CHIBIOS_MAIN_STACK_SIZE 0x190)
SET(ChibiOS_LINKER_SCRIPT ${CMAKE_CURRENT_LIST_DIR}/cfg/STM32L053x8.ld)

SET(TOOLCHAIN_PREFIX C:/Users/error414/Documents/STM32-tools/gcc-arm-none-eabi-7-2017-q4-major/)

set(CMAKE_VERBOSE_MAKEFILE ON)

PROJECT(stm32-chibios C ASM)
set(CMAKE_INCLUDE_CURRENT_DIR TRUE)

IF(${CMAKE_BUILD_TYPE} STREQUAL Debug)
         ADD_DEFINITIONS(-DCH_DBG_STATISTICS=FALSE)
         ADD_DEFINITIONS(-DCH_DBG_SYSTEM_STATE_CHECK=TRUE)
         ADD_DEFINITIONS(-DCH_DBG_ENABLE_CHECKS=TRUE)
         ADD_DEFINITIONS(-DCH_DBG_ENABLE_ASSERTS=TRUE)
         ADD_DEFINITIONS(-DCH_DBG_ENABLE_STACK_CHECK=TRUE)
         ADD_DEFINITIONS(-DCH_DBG_FILL_THREADS=TRUE)
         ADD_DEFINITIONS(-DSHELL_CMD_THREADS_ENABLED=TRUE)
         #ADD_DEFINITIONS(-DBUILD_TYPE_DEBUG)
ENDIF()

IF(${CMAKE_BUILD_TYPE} STREQUAL Release)
	ADD_DEFINITIONS(-DSHELL_CMD_THREADS_ENABLED=FALSE)
ENDIF()

ADD_DEFINITIONS(-DCHPRINTF_USE_FLOAT=TRUE)
ADD_DEFINITIONS(-DCORTEX_USE_FPU=TRUE)
ADD_DEFINITIONS(-DCORTEX_ENABLE_WFI_IDLE=TRUE)

FIND_PACKAGE(ChibiOS COMPONENTS rt hal REQUIRED)

SET(PROJECT_INCLUDES
		${ChibiOS_INCLUDE_DIRS}
		${CMAKE_CURRENT_SOURCE_DIR}
		${CMAKE_CURRENT_LIST_DIR}/cfg/
		${CMAKE_CURRENT_LIST_DIR}/shell/
		${CMAKE_CURRENT_LIST_DIR}/drivers/
		${CMAKE_CURRENT_LIST_DIR}/drivers/stm32L0/
		${CMAKE_CURRENT_LIST_DIR}/threads/
)

SET(PROJECT_SOURCES
		${CMAKE_CURRENT_LIST_DIR}/main.c
		${CMAKE_CURRENT_LIST_DIR}/shell/shell.c
		${CMAKE_CURRENT_LIST_DIR}/drivers/stm32L0/eeprom_lld.c
)

SET(PROJECT_SOURCES_DIRS
		cfg/*.c
		drivers/*.c
		threads/*.c
)

IF(${CMAKE_BUILD_TYPE} STREQUAL Debug)
	LIST (APPEND PROJECT_SOURCES
			${CHIBIOS_ROOT}/os/rt/src/chdebug.c
			${CHIBIOS_ROOT}/os/rt/src/chtrace.c
			${CHIBIOS_ROOT}/os/rt/src/chstats.c
			${CMAKE_CURRENT_LIST_DIR}/shell/debugShellCmd.c
			)
ENDIF()

IF(${CMAKE_BUILD_TYPE} STREQUAL Release)
	LIST (APPEND PROJECT_SOURCES
			${CMAKE_CURRENT_LIST_DIR}/shell/shellCmd.c
			)
ENDIF()


FOREACH(SOURCE_DIR ${PROJECT_SOURCES_DIRS})
		FILE(GLOB_RECURSE SOURCE ${SOURCE_DIR})
		LIST(APPEND PROJECT_SOURCES ${SOURCE})
ENDFOREACH()


#[[MESSAGE(STATUS "Project Sources: ")
FOREACH(INCLUDE ${PROJECT_SOURCES})
	MESSAGE(STATUS "\t${INCLUDE}")
ENDFOREACH()]]

#[[MESSAGE(STATUS "Project Includes: ")
FOREACH(INCLUDE ${PROJECT_INCLUDES})
	MESSAGE(STATUS "\t${INCLUDE}")
ENDFOREACH()]]


INCLUDE_DIRECTORIES(${PROJECT_INCLUDES})

SET(STM32_LINKER_SCRIPT ${ChibiOS_LINKER_SCRIPT})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${ChibiOS_SOURCES} ${PROJECT_SOURCES}  )
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} -lm -lnosys)

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME})

STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
STM32_ADD_DUMP_TARGET(${CMAKE_PROJECT_NAME})

